--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,14 @@ services:
       - "8000:8000"
     volumes:
       - ./app/models:/app/app/models:ro
-      - /tmp/neirofitness:/tmp/neirofitness
+      - /uploads/neirofitness:/uploads/neirofitness
     environment:
       - PYTHONUNBUFFERED=1
       - MAX_FILE_SIZE_MB=500
       - MAX_CONCURRENT_JOBS=3
       - CHUNK_SIZE=8192
-      - TEMP_DIR=/tmp/neirofitness
-      - OUTPUT_DIR=/tmp/neirofitness/output
+      - TEMP_DIR=/uploads/neirofitness
+      - OUTPUT_DIR=/uploads/neirofitness/output
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/"]
